# carbon-aware-dispatcher

./: README.md  action.yml  check_grid.py  pyproject.toml  setup.sh  setup_wizard.py  test_check_grid.py
.github/workflows/: carbon-check.yml
ci-templates/: bitbucket-pipelines.yml  circleci-config.yml  gitlab-ci.yml
providers/: __init__.py  aemo.py  base.py  eia.py  electricity_maps.py  entsoe.py  gridstatus.py  open_meteo.py  runners.py  uk.py
