[project]
name = "carbon-aware-dispatcher"
version = "1.0.0"
description = "Sustainable CI/CD — dispatches workflows only when the energy grid is powered by renewables"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "requests-mock>=1.11",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
